<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="grocket.com.smart119citizen.InsertContactActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:layout_alignParentTop="true">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/toolbar"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/txt_add_contact"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:hint="@string/contactlist_edt_name_hint"
            android:textColorHint="@color/hint_text_color"
            android:background="@drawable/inputbox_common"
            android:gravity="left"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:maxLength="255"
            android:nextFocusDown="@+id/edtClass"
            android:selectAllOnFocus="false" />

        <EditText
            android:id="@+id/edtClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:hint="@string/contactlist_edt_class_hint"
            android:textColorHint="@color/hint_text_color"
            android:background="@drawable/inputbox_common"
            android:gravity="left"
            android:inputType="text"
            android:maxLines="1"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:maxLength="255"
            android:nextFocusDown="@+id/edtTelephone"
            android:selectAllOnFocus="false"
            android:layout_marginTop="10dp" />


        <EditText
            android:id="@+id/edtTelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:hint="@string/contactlist_edt_telephone_hint"
            android:textColorHint="@color/hint_text_color"
            android:background="@drawable/inputbox_common"
            android:gravity="left"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:maxLength="255"
            android:selectAllOnFocus="false"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

    </LinearLayout>


    <ImageButton
        android:id="@+id/btnInsertTelephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_contact_inserttel"/>

</RelativeLayout>
